--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
 <section id="flux-cart"></section>
-<script src="js/bundle.js"></script>
+<script src="js/app.min.js"></script>
 </body>
 </html>
